[CONTINUUM-602] Integrate new Continuum CSS
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@380256 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/localization/Continuum.properties
+++ b/continuum-web/src/main/resources/localization/Continuum.properties
@@ -88,7 +88,7 @@ project.goals.message = Enter the goals to execute (default: jar:install)
 // Maven 2
 // ----------------------------------------------------------------------
 
-m2PomUrl.label = POM Url
+m2PomUrl.label = M2 POM Url
 m2PomUrl.message =  Enter the URL to the Maven 2 POM
 m2PomUrl.error = You must enter a valid URL
 m2PomFile.label = Upload POM
