Added bad login text
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@421260 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -55,6 +55,7 @@ login.username = Username
 login.password = Password
 login.rememberMe = Remember me
 login.submit = Connect
+login.bad_login_password = Wrong username or password
 
 // ----------------------------------------------------------------------
 // Page: Summary
