[CONTINUUM-771] Add user management pages Submitted By: Henry Isidro
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@424993 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -330,3 +330,6 @@ editUser.section.title = Edit User
 deleteUser.page.title = Continuum - Delete User
 deleteUser.section.title = Delete User
 deleteUser.confirmation.message = Are you sure you want to delete the user "{0}"?
+role.page.title = Continuum - Roles List
+role.section.title = Roles List
+role.rolename = Roles
