[CONTINUUM-771] Add user management screens Submitted By: Henry Isidro
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@427593 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -37,6 +37,7 @@ menu.add.shellProject = Shell Project
 menu.administration = Administration
 menu.administration.configuration = Configuration
 menu.administration.schedules = Schedules
+menu.administration.users = Users
 
 // ----------------------------------------------------------------------
 // Page: About
