--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -105,13 +105,23 @@ configuration.submit.edit = Edit
 # ----------------------------------------------------------------------
 # Page: Add Project
 # ----------------------------------------------------------------------
+add.project.field.required.error = Either POM URL or Upload POM is required.
 add.project.unknown.host.error = The specified host is either unknown or inaccessible.
 add.project.malformed.url.error = The URL provided is malformed.
 add.project.xml.parse.error = The XML content of the POM can not be parsed.
-add.project.extend.error = Cannot use a POM with an 'extend' element
+add.project.extend.error = Cannot use a POM with an 'extend' element.
+add.project.missing.pom.error = POM file does not exist.
 add.project.missing.groupid.error = Missing 'groupId' element in the POM.
 add.project.missing.artifactid.error = Missing 'artifactId' element in the POM.
-add.project.unknown.error = The specified resource cannot be accessed.
+add.project.missing.version.error = Missing 'version' element in the POM.
+add.project.missing.name.error = Missing 'name' element in the POM.
+add.project.missing.repository.error = Missing 'repository' element in the POM.
+add.project.missing.scm.error = Missing 'scm' element in the POM.
+add.project.missing.scm.connection.error = Missing 'connection' sub-element in the 'scm' element in the POM.
+add.project.missing.notifier.type.error = Missing 'type' sub-element in the 'notifier' element in the POM. 
+add.project.missing.notifier.configuration.error = Missing 'configuration' sub-element in the 'notifier' element in the POM.
+add.project.metadata.transfer.error = Transfer of Metadata has failed.
+add.project.unknown.error = The specified resource cannot be accessed. Please try again later or contact your administrator.
 
 # ----------------------------------------------------------------------
 # Page: AddMavenOneProject
@@ -193,6 +203,7 @@ projectView.buildDefinition.buildFile = Build File
 projectView.buildDefinition.profile = Profile
 projectView.buildDefinition.schedule = Schedule
 projectView.buildDefinition.from = From
+projectView.buildDefinition.default = Default
 projectView.notifiers = Notifiers
 projectView.notifier.type = Type
 projectView.notifier.recipient = Recipient
