Rework the error handling and allow acegi to deal with authentication and authorization exceptions
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@434244 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -41,14 +41,6 @@ menu.administration.schedules = Schedules
 menu.administration.users = Users
 
 # ----------------------------------------------------------------------
-# Page: error
-# ----------------------------------------------------------------------
-error.page.title = Error Page
-error.section.title = An Internal Error Has Occurred!
-error.exception.message = Exception Message:
-error.message = The server was not able of performing the request. Please try again later. Contact the administrator if this problem persists.
-
-# ----------------------------------------------------------------------
 # Page: About
 # ----------------------------------------------------------------------
 about.page.title = Continuum - About
@@ -372,3 +364,17 @@ deleteUser.confirmation.message = Are you sure you want to delete the user "{0}"
 role.page.title = Continuum - Roles List
 role.section.title = Roles List
 role.rolename = Roles
+
+
+# ----------------------------------------------------------------------
+# Errors
+# ----------------------------------------------------------------------
+error.page.title = Error
+error.exception.message = Exception Message:
+
+error.403.title = Access is denied
+error.403.detail = Access to the specified resource has been forbidden.
+error.404.title = Page not found
+error.404.detail = The requested resource is not available.
+error.500.title = An Internal Error Has Occurred!
+error.500.detail = The server was not able of performing the request. Please try again later. Contact the administrator if this problem persists.
