--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -353,3 +353,64 @@ surefireReport.package = Package Name
 surefireReport.class = Class
 surefireReport.testCase = Test Case
 surefireReport.failureDetails = Failure Details
+
+
+# ----------------------------------------------------------------------
+# MavenUser.properties starts here
+# This is because ExtremeComponents can't support 2 resource bundle definitions on web.xml
+# ----------------------------------------------------------------------
+
+# ----------------------------------------------------------------------
+# Page: Login
+# ----------------------------------------------------------------------
+login.page.title = Login page
+login.section.title = Authentication
+login.username = Username
+login.password = Password
+login.rememberMe = Remember me
+login.submit = Login
+login.bad_login_password = Wrong username or password
+
+# ----------------------------------------------------------------------
+# Page: Add/Edit/DeleteUsers
+# ----------------------------------------------------------------------
+
+user.username = User Name
+user.password = Password
+user.email = Email Address
+users.page.title = Continuum - Users List
+users.section.title = Users List
+user.add.page.title = Continuum - Add User
+user.add.section.title = Add User
+user.edit.page.title = Continuum - Edit User
+user.edit.section.title = Edit User
+user.delete.page.title = Continuum - Delete User
+user.delete.section.title = Delete User
+user.delete.confirmation.message = Are you sure you want to delete the user "{0}"?
+role.page.title = Continuum - Roles List
+role.section.title = Roles List
+role.rolename = Roles
+
+# ----------------------------------------------------------------------
+# Page: Change User Password
+# ----------------------------------------------------------------------
+user.change.password.page.title = Continuum - Change User Password
+user.change.password.section.title = Change User Password
+user.current.password = Current Password
+user.new.password = New Password
+user.confirm.password = Confirm Password
+user.invalid.current.password.error = Invalid current password
+user.password.mismatch.error = Password mismatch
+
+# ----------------------------------------------------------------------
+# Errors
+# ----------------------------------------------------------------------
+error.page.title = Error
+error.exception.message = Exception Message:
+
+error.403.title = Access is denied
+error.403.detail = Access to the specified resource has been forbidden.
+error.404.title = Page not found
+error.404.detail = The requested resource is not available.
+error.500.title = An Internal Error Has Occurred!
+error.500.detail = The server was not able of performing the request. Please try again later. Contact the administrator if this problem persists.
