Add myAccount menu
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@440902 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -39,6 +39,7 @@ menu.administration = Administration
 menu.administration.configuration = Configuration
 menu.administration.schedules = Schedules
 menu.administration.users = Users
+menu.account.options = My account
 
 # ----------------------------------------------------------------------
 # Page: About
@@ -384,6 +385,7 @@ user.add.page.title = Continuum - Add User
 user.add.section.title = Add User
 user.edit.page.title = Continuum - Edit User
 user.edit.section.title = Edit User
+user.edit.account = Edit user info
 user.delete.page.title = Continuum - Delete User
 user.delete.section.title = Delete User
 user.delete.confirmation.message = Are you sure you want to delete the user "{0}"?
