Add role translations
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@442785 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -197,6 +197,11 @@ projectView.usedBy= Used By
 projectView.developers = Developers
 projectView.developer.name = Name
 projectView.developer.email = Email
+projectView.username = User Name
+projectView.role.view = View
+projectView.role.edit = Edit
+projectView.role.delete = Delete
+projectView.role.build = Build
 
 # ----------------------------------------------------------------------
 # Page: ProjectEdit
@@ -392,6 +397,23 @@ user.delete.confirmation.message = Are you sure you want to delete the user "{0}
 role.page.title = Continuum - Roles List
 role.section.title = Roles List
 role.rolename = Roles
+
+# ----------------------------------------------------------------------
+# Page: Add/Edit/DeleteUsergroups
+# ----------------------------------------------------------------------
+
+usergroup.name = Usergroup Name
+usergroup.description = Description
+usergroups.page.title = Continuum - Users List
+usergroups.section.title = Users List
+usergroup.add.page.title = Continuum - Add Usergroup
+usergroup.add.section.title = Add Usergroup
+usergroup.edit.page.title = Continuum - Edit Usergroup
+usergroup.edit.section.title = Edit Usergroup
+usergroup.edit.account = Edit usergroup info
+usergroup.delete.page.title = Continuum - Delete Usergroup
+usergroup.delete.section.title = Delete Usergroup
+usergroup.delete.confirmation.message = Are you sure you want to delete the usergroup "{0}"?
 
 # ----------------------------------------------------------------------
 # Page: Change User Password
