Improve interface for permission editing
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@442787 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -202,6 +202,7 @@ projectView.role.view = View
 projectView.role.edit = Edit
 projectView.role.delete = Delete
 projectView.role.build = Build
+projectView.role.administer = Administer
 
 # ----------------------------------------------------------------------
 # Page: ProjectEdit
