Add user group admin link
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@442831 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -39,6 +39,7 @@ menu.administration = Administration
 menu.administration.configuration = Configuration
 menu.administration.schedules = Schedules
 menu.administration.users = Users
+menu.administration.userGroups = User Groups
 menu.account.options = My account
 
 # ----------------------------------------------------------------------
