Implement missing messages
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@443127 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -285,7 +285,6 @@ buildResults.buildNumber = Build #
 buildResults.startTime = Start Time
 buildResults.endTime = End Time
 buildResults.state = State
-buildResults.noChanges = No changes
 
 # ----------------------------------------------------------------------
 # Page: BuildResults
@@ -294,13 +293,14 @@ buildResult.page.title = Continuum - Build result
 buildResult.section.title = Build result for {0}
 buildResult.startTime = Start Time
 buildResult.endTime = End Time
-buildResult.buildTrigger = Build Trigger
+buildResult.trigger = Build Trigger
 buildResult.state = State
 buildResult.buildNumber = Build#
 buildResult.buildError = Build Error
 buildResult.buildOutput = Output
 buildResult.noOutput = No output.
 buildResult.changes = Changes
+buildResult.noChanges = No changes
 buildResult.changes.author = Author
 buildResult.changes.date = Date
 buildResult.changes.comment = Comment
@@ -308,6 +308,19 @@ buildResult.changes.files = Files
 buildResult.changesSinceLastSuccess = Other Changes Since Last Success
 buildResult.generatedReports.title = Generated Reports
 buildResult.generatedReports.surefire = Surefire Report
+
+# From ContinuumProjectState
+buildResult.trigger.0 = Scheduled
+buildResult.trigger.1 = Forced
+buildResult.state.1 = New
+buildResult.state.2 = OK 
+buildResult.state.3 = Failed
+buildResult.state.4 = Error 
+buildResult.state.6 = Building 
+buildResult.state.7 = Checking out 
+buildResult.state.8 = Updating 
+buildResult.state.9 = Warning 
+buildResult.state.10 = Checked out 
 
 # ----------------------------------------------------------------------
 # Page: WorkingCopy
