[CONTINUUM-857] Allow several groups per user Submitted by: Lester Ecarma
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@443168 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -412,6 +412,7 @@ user.delete.confirmation.message = Are you sure you want to delete the user "{0}
 role.page.title = Continuum - Roles List
 role.section.title = Roles List
 role.rolename = Roles
+user.group.header = Groups
 
 # ----------------------------------------------------------------------
 # Page: Add/Edit/DeleteUsergroups
