--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -104,6 +104,9 @@ add.project.missing.scm.connection.error = Missing 'connection' sub-element in t
 add.project.missing.notifier.type.error = Missing 'type' sub-element in the 'notifier' element in the POM. 
 add.project.missing.notifier.configuration.error = Missing 'configuration' sub-element in the 'notifier' element in the POM.
 add.project.metadata.transfer.error = Transfer of Metadata has failed.
+add.project.unauthorized.error = You are not authorized to access the requested URL. Please verify that the correct username and password are provided.
+add.project.artifact.not.found.error = Missing artifact trying to build the POM. Check that its parent POM is available or add it first in Continuum.
+add.project.project.building.error = Unknown error trying to build POM.
 add.project.unknown.error = The specified resource cannot be accessed. Please try again later or contact your administrator.
 
 # ----------------------------------------------------------------------
