--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -444,6 +444,8 @@ user.new.password = New Password
 user.confirm.password = Confirm Password
 user.invalid.current.password.error = Invalid current password
 user.password.mismatch.error = Password mismatch
+user.expired.password.error = Your password has expired.
+user.empty.password.error = New password cannot be empty.
 
 # ----------------------------------------------------------------------
 # Errors
