--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -403,26 +403,28 @@ login.username = Username
 login.password = Password
 login.rememberMe = Remember me
 login.submit = Login
-login.bad_login_password = Wrong username or password
+login.bad.login.password = Wrong username or password
+login.account.locked = Your account has been locked. Please contact your administrator.
 
 # ----------------------------------------------------------------------
 # Page: Add/Edit/DeleteUsers
 # ----------------------------------------------------------------------
 
 user.username = User Name
+user.fullname = Full Name
 user.password = Password
 user.email = Email Address
-users.page.title = Continuum - Users List
+users.page.title = Users List
 users.section.title = Users List
-user.add.page.title = Continuum - Add User
+user.add.page.title = Add User
 user.add.section.title = Add User
-user.edit.page.title = Continuum - Edit User
+user.edit.page.title = Edit User
 user.edit.section.title = Edit User
 user.edit.account = Edit user info
-user.delete.page.title = Continuum - Delete User
+user.delete.page.title = Delete User
 user.delete.section.title = Delete User
 user.delete.confirmation.message = Are you sure you want to delete the user "{0}"?
-role.page.title = Continuum - Roles List
+role.page.title = Roles List
 role.section.title = Roles List
 role.rolename = Roles
 user.group.header = Groups
