--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -448,6 +448,7 @@ users.page.title = Users List
 users.section.title = Users List
 user.add.page.title = Add User
 user.add.section.title = Add User
+user.add.duplicate.username.error = The username "{0}" is already in use.
 user.edit.page.title = Edit User
 user.edit.section.title = Edit User
 user.edit.account = Edit user info
