[CONTINUUM-864] Adding a project with a name that already exist causes internal error
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@446933 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -14,6 +14,7 @@ edit = Edit
 delete = Delete
 save = Save
 add = Add
+back = Back
 workingCopy = Working Copy
 builds = Builds
 info = Info
@@ -143,6 +144,7 @@ add.ant.project.section.title = Add Ant Project
 
 projectName.label = Project Name
 projectName.error = You must provide a project name
+projectName.already.exist.error = Project name already exist
 projectName.message = Enter the project name
 
 projectScm.label = Scm
@@ -233,6 +235,7 @@ buildDefinition.goals.maven.label = Goals
 buildDefinition.arguments.label = Arguments
 buildDefinition.defaultForProject.label = Is it default?
 buildDefinition.schedule.label = Schedule
+buildDefinition.save.error.message = There was an error updating the schedule...either no schedule name was supplied or a schedule with the same name already exists.
 
 # ----------------------------------------------------------------------
 # Page: DeleteBuildDefinition
