--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -91,6 +91,7 @@ configuration.submit.edit = Edit
 # ----------------------------------------------------------------------
 add.project.field.required.error = Either POM URL or Upload POM is required.
 add.project.unknown.host.error = The specified host is either unknown or inaccessible.
+add.project.connect.error = Unable to connect to remote server
 add.project.malformed.url.error = The URL provided is malformed.
 add.project.xml.parse.error = The XML content of the POM can not be parsed.
 add.project.extend.error = Cannot use a POM with an 'extend' element.
