Add buildDefinition messages
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-acegi@447485 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -236,7 +236,8 @@ buildDefinition.goals.maven.label = Goals
 buildDefinition.arguments.label = Arguments
 buildDefinition.defaultForProject.label = Is it default?
 buildDefinition.schedule.label = Schedule
-buildDefinition.save.error.message = There was an error updating the schedule...either no schedule name was supplied or a schedule with the same name already exists.
+buildDefinition.noname.save.error.message = There was an error saving the schedule, no schedule name was supplied.
+buildDefinition.duplicatename.save.error.message = There was an error saving the schedule, a schedule with the same name already exists.
 
 # ----------------------------------------------------------------------
 # Page: DeleteBuildDefinition
