--- a/continuum-webapp/src/main/resources/localization/Continuum.properties
+++ b/continuum-webapp/src/main/resources/localization/Continuum.properties
@@ -95,7 +95,7 @@ add.project.connect.error = Unable to connect to remote server
 add.project.malformed.url.error = The URL provided is malformed.
 add.project.xml.parse.error = The XML content of the POM can not be parsed.
 add.project.extend.error = Cannot use a POM with an 'extend' element.
-add.project.missing.pom.error = POM file does not exist.
+add.project.missing.pom.error = POM file does not exist. Either the POM you specified or one of its modules does not exist.
 add.project.missing.groupid.error = Missing 'groupId' element in the POM.
 add.project.missing.artifactid.error = Missing 'artifactId' element in the POM.
 add.project.missing.version.error = Missing 'version' element in the POM.
